# API-python

./: config.py  locators.py  pyproject.toml  settings.toml
partner/pages/: transferwallet_page.py
partner/tests/: test_transferwallet.py
