[tool.poetry]
name = "mancalaslots.tests.bo-api"
version = "0.1.0"
description = ""
authors = ["Alecsey Sorokin <alecsey.m.s@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
pytest = "^7.2.0"
requests = "^2.28.1"
dynaconf = "^3.1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
